<resources>
    <string name="app_name">MobileDevelopmentApp_B00686672</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="ca_register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="ca_login">Login</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="gender">Gender</string>
    <string name="title_activity_weather_page">WeatherPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_weather_page_main">WeatherPageMain</string>
    <string name="reset_email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
</resources>
