<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46a093"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/weather_logo"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#46a093"
        android:drawableLeft="@drawable/yellow_name"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/name" />
    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#46a093"
        android:drawableLeft="@drawable/yellow_email"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/email_address" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/yellow_account"
        android:background="#46a093"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#46a093"
        android:drawableLeft="@drawable/yellow_lock"
        android:imeOptions="actionSearch"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/cnf_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#46a093"
        android:drawableLeft="@drawable/yellow_lock"
        android:imeOptions="actionSearch"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/confirm_password" />
    <EditText
        android:id="@+id/gender"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/yellow_face"
        android:background="#46a093"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/gender" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutton"
        android:onClick="SignUP_OK"
        android:text="@string/ca_register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#fdd036"
            android:textSize="16dp"
            android:onClick="Login_Screen"
            android:text="@string/ca_login"/>

    </LinearLayout>

</LinearLayout>