<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46a093"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/weather_logo" />

    <EditText
        android:id="@+id/reset_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/yellow_account"
        android:hint="@string/reset_email_address"
        android:imeOptions="actionSearch"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="16dp"
        android:paddingLeft="2dp"
        android:textColor="#fdd036" />

    <EditText
        android:id="@+id/reset_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/yellow_account"
        android:hint="@string/new_password"
        android:imeOptions="actionSearch"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="16dp"
        android:paddingLeft="2dp"
        android:textColor="#fdd036" />

    <EditText
        android:id="@+id/reset_cnf_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/yellow_account"
        android:hint="@string/reset_confirm_password"
        android:imeOptions="actionSearch"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="16dp"
        android:paddingLeft="2dp"
        android:textColor="#fdd036" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/mybutton"
        android:onClick="Reset_Password_OK"
        android:text="@string/reset_password"/>


</LinearLayout>